<resources>
    <string name="app_name">Rishabh\.s Android labs</string>
    <string name="hello_message">Type your password</string>
    <string name="button_message">Login</string>
</resources>